<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
	android:paddingLeft="@dimen/espacamento_texto_corpo"
    android:orientation="vertical" >
    
    <TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingBottom="@dimen/espacamento_texto_corpo"
	    style="@style/texto18NegritoVerde"
	    android:text="@string/contato_titulo"/>
    
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/espacamento_texto_corpo"
		android:text="@string/contato_endereco_fga"/>
    
	<TextView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textStyle="bold|italic"
		android:text="@string/contato_telefones"/>
	
	<TextView 
        android:id="@+tv/ContatoSecretaria"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contato_secretaria"
		style="@style/styleTelefonesContato"/>
	
	<TextView
        android:id="@+tv/ContatoCPD" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contato_cpd"
		style="@style/styleTelefonesContato"/>
	
	<TextView 
	    android:id="@+tv/ContatoDirecao"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contato_direcao"
		style="@style/styleTelefonesContato"/>
	
	<TextView 
	    android:id="@+tv/ContatoAdministracao"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contato_administracao"
		style="@style/styleTelefonesContato"/>
	
	<TextView 
	    android:id="@+tv/ContatoCoodGeral"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/contato_cood_geral"
		style="@style/styleTelefonesContato"/>
	
</LinearLayout>