<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+tv/EventoNome"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    style="@style/texto18NegritoVerde"
	    android:text="@string/evento_nome"/>
    
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/espacamento_texto_corpo"
		android:paddingTop="@dimen/espacamento_texto_corpo"
		android:orientation="vertical" >
		
		<TextView
		    android:id="@+tv/EventoLocal" 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/evento_local"/>
		
		<TextView 
		    android:id="@+tv/EventoDataInicio"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/evento_data_inicio"/>
		
		<TextView 
		    android:id="@+tv/EventoDataTermino"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/evento_data_termino"/>
		
		<TextView 
		    android:id="@+tv/EventoHorario"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/evento_horario"/>
		
		<TextView 
		    android:id="@+tv/EventoTipoDeEvento"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/evento_tipo_de_evento"/>
		
		<TextView 
		    android:id="@+tv/EventoContato"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/espacamento_texto_corpo"
		    android:text="@string/evento_contato"/>
		
	</LinearLayout>
	
	<Button 
		android:id="@+btn/EventoMaisInfo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:text="@string/evento_mais_info"
		style="@style/btnMaisInfo" />
	
</LinearLayout>