<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<!-- Inicio das notícias -->
		<include layout="@layout/include_maintop"/>
	<!-- Fim da parte da notícia -->
    
    <!-- Início da parte da Dashbar -->
    <com.google.android.apps.iosched.ui.widget.DashboardLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        
        <Button 
            android:id="@+bt/Noticia"
            android:text="@string/btn_noticia"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/noticias_icon_72"
        	style="@style/icones_main_em_pe_estilo"/>
        
        <Button 
            android:id="@+bt/Eventos"
            android:text="@string/btn_eventos"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/eventos_icon_72" 
        	style="@style/icones_main_em_pe_estilo"/>
        
        <Button 
            android:id="@+bt/OndeComer"
            android:text="@string/btn_ondecomer"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/alimentacao_icon_72" 
        	style="@style/icones_main_em_pe_estilo"/>
        
        <Button 
            android:id="@+bt/Transporte"
            android:text="@string/btn_transporte"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/transporte_icon_72"
        	style="@style/icones_main_em_pe_estilo"/>
        
        <Button 
            android:id="@+bt/SisMat"
            android:text="@string/btn_sis_mat"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/config_icon_72" 
        	style="@style/icones_main_em_pe_estilo"/>
        
        <Button 
            android:id="@+bt/Contatos"
            android:text="@string/btn_contatos"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:drawableTop="@drawable/info_icon_72" 
        	style="@style/icones_main_em_pe_estilo"/>

    </com.google.android.apps.iosched.ui.widget.DashboardLayout>
    <!-- Fim do Dashboard -->

</LinearLayout>