<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
    <!-- Parte da imagem da notícia -->
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/banner_dimen_height">
          
          <ImageView
              android:id="@+imgv/Noticia"
              android:layout_width="fill_parent"
              android:layout_height="@dimen/banner_dimen_height"
              android:layout_gravity="center_horizontal"
              android:contentDescription="@string/img_descricao_banner"
              android:src="@drawable/car"
              android:scaleType="fitXY" />
          
          <!-- Parte do texto da notícia -->
          <LinearLayout 
           android:orientation="vertical"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:paddingTop="@dimen/banner_texto_paddingTOP">
           
	       	 <TextView 
	       	   android:id="@+tv/BannerTitulo"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:text="@string/banner_titulo"
	           style="@style/texto18NegritoVerde"/>
	       	 
	       	 <TextView 
	       	   android:id="@+tv/BannerData"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:text="@string/banner_data"
	           style="@style/texto14Verde"/>
		   
		</LinearLayout>
    </FrameLayout>

</LinearLayout>